# hilo

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  SKILL.md  docker-compose.yml
.coding-hermes/: tasks.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.gitreins/: config.yaml  tasks.yaml
.vfs/: manifest.yaml
.vfs/graph/: edges.jsonl
docs/: architecture.md  cli-reference.md  dashboard.html  getting-started.md  graph-engine.md  hilo-backends.md  hilo-cli.md  hilo-core.md  hilo-fuse.md  hilo-graph.md  hilo-mcp.md  hilo-metadata.md  hilo-permissions.md  hilo-plugins.md  hilo-triggers.md  index.html  index.md  mcp-tools.md
hilo-backends/: Cargo.toml
hilo-backends/src/: git.rs  lib.rs  local.rs  s3.rs
hilo-backends/tests/: s3_integration_test.rs
hilo-cli/: Cargo.toml
hilo-cli/src/: main.rs
hilo-cli/src/commands/: backend.rs  classify.rs  graph.rs  hooks.rs  init.rs  meta.rs  mod.rs  mount.rs  plugin.rs  serve.rs  workspace.rs
hilo-cli/tests/: cli.rs
hilo-core/: Cargo.toml
hilo-core/src/: lib.rs  logging.rs  manifest.rs  workspace.rs  worktree.rs
hilo-core/tests/: manifest_test.rs
hilo-ffi/: Cargo.toml  README.md  build.rs
hilo-ffi/src/: hilo.udl  lib.rs
hilo-fuse/: Cargo.toml
hilo-fuse/benches/: fuse_bench.rs
hilo-fuse/src/: daemon.rs  lib.rs  ops.rs  permissions.rs  workspace_mount.rs
hilo-fuse/tests/: fuse_test.rs
hilo-graph/: Cargo.toml
hilo-graph/benches/: graph_bench.rs  semantic_bench.rs  signal_bench.rs
hilo-graph/src/: classify.rs  duckdb.rs  edges.rs  error.rs  graph.rs  impact.rs  lib.rs  parser.rs  provenance.rs  rules.rs  semantic.rs  signal.rs
hilo-graph/tests/: determinism_test.rs  edges_test.rs  graph_test.rs  impact_test.rs  parser_test.rs  semantic_test.rs  signal_test.rs
hilo-graph/tests/fixtures/: app.ts  handler.go  handler_test.go  main.go  middleware.go  utils.py
hilo-mcp/: Cargo.toml
hilo-mcp/src/: error.rs  lib.rs  rate_limiter.rs  server.rs
hilo-mcp/src/tools/: mod.rs
hilo-mcp/tests/: mcp_test.rs
hilo-metadata/: Cargo.toml
hilo-metadata/src/: inventory.rs  lib.rs  xattr.rs
hilo-metadata/tests/: inventory_test.rs  xattr_test.rs
hilo-permissions/: Cargo.toml
hilo-permissions/src/: lib.rs
hilo-permissions/tests/: permission_test.rs
hilo-plugins/: Cargo.toml
hilo-plugins/src/: lib.rs  registry.rs
hilo-plugins/tests/: plugin_test.rs
hilo-triggers/: Cargo.toml
hilo-triggers/src/: engine.rs  lib.rs
hilo-triggers/tests/: trigger_test.rs
specs/: warpfs-spec.md
tests/integration/: start.sh  stop.sh
warpfs-cli/: Cargo.toml
warpfs-cli/src/: main.rs
warpfs-cli/src/commands/: graph.rs  serve.rs
warpfs-cli/tests/: cli.rs
warpfs-fuse/src/: ops.rs
warpfs-graph/: Cargo.toml
warpfs-graph/src/: edges.rs  impact.rs  lib.rs  parser.rs
warpfs-graph/tests/: edges_test.rs  parser_test.rs
warpfs-mcp/: Cargo.toml
warpfs-mcp/src/: error.rs  lib.rs  server.rs
warpfs-mcp/src/tools/: mod.rs
warpfs-mcp/tests/: mcp_test.rs
warpfs-metadata/: Cargo.toml
warpfs-metadata/src/: inventory.rs  lib.rs  xattr.rs
warpfs-metadata/tests/: inventory_test.rs  xattr_test.rs
warpfs-triggers/src/: engine.rs  lib.rs
warpfs-triggers/tests/: trigger_test.rs
