[workspace]
members = ["hilo-core", "hilo-metadata", "hilo-graph", "hilo-cli", "hilo-mcp", "hilo-backends", "hilo-triggers", "hilo-fuse", "hilo-plugins", "hilo-permissions", "hilo-ffi"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gethilo/hilo"
