[package]
name = "hilo-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gethilo/hilo"
description = "Hilo CLI shim — init, meta, graph, serve"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = "1"
serde_yaml = "0.9"
rayon = "1"

# Internal crates (package names use underscores; directories use hyphens)
hilo_core = { path = "../hilo-core" }
hilo_metadata = { path = "../hilo-metadata" }
hilo_graph = { path = "../hilo-graph" }
hilo_mcp = { path = "../hilo-mcp" }
hilo_backends = { path = "../hilo-backends" }
hilo_fuse = { path = "../hilo-fuse" }

[[bin]]
name = "hilo"
path = "src/main.rs"
