[package]
name = "hilo_graph"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gethilo/hilo"
description = "Hilo graph engine — tree-sitter AST parsing and DuckDB graph queries"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tree-sitter = "0.25"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-elixir = "0.3"
tree-sitter-haskell = "0.23"
tree-sitter-scala = "0.26"
tree-sitter-lua = "0.5"
tree-sitter-dart = "0.2"
tree-sitter-erlang = "0.19"
tree-sitter-zig = "1.1"
tree-sitter-clojure = "0.1"
tree-sitter-ocaml = "0.23"
tree-sitter-r = "1.1"
tree-sitter-julia = "0.23"
tree-sitter-elm = "5.9"
duckdb = { version = "1.1", features = ["bundled"] }
hilo_metadata = { path = "../hilo-metadata" }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "graph_bench"
harness = false
