[package]
name = "hilo_mcp"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gethilo/hilo"
description = "Hilo MCP server — stdio-based Model Context Protocol server"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
hilo_metadata = { path = "../hilo-metadata" }
hilo_graph = { path = "../hilo-graph" }
hilo_core = { path = "../hilo-core" }

[dev-dependencies]
tempfile = "3"
