[package]
name = "hilo_metadata"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gethilo/hilo"
description = "Hilo metadata engine — xattr read/write and inventory file I/O"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
xattr = "1"

[dev-dependencies]
tempfile = "3"
