[package]
name = "hilo_plugins"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gethilo/hilo"
description = "Hilo plugin system — extism wasm runtime, host function registry"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
extism = "1"
